squished another bug

--- a/static/style.css
+++ b/static/style.css
@@ -1225,7 +1225,7 @@ button {
 }
 
 .templatefullwidthflexchild {
-    max-width: 90%;
+    width: 90%;
     margin: 0;
     padding: 0;
 }
